--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -3,7 +3,7 @@ Theme Name: _BluePlate
 Theme URI: http://www.seanmichael.me
 Author: Sean Michael
 Author URI: http://www.seanmichael.me
-Description: A Starter Theme Created For Sean Michael
+Description: A Starter Theme Created By Sean Michael
 Version: 1.0
 Tags: Clean, Mean
 */
