--- a/css/_global.scss
+++ b/css/_global.scss
@@ -1,3 +1,7 @@
+/* =Fonts
+----------------------------------------------- */
+
+
 /* =Global
 ----------------------------------------------- */
 
@@ -24,20 +28,33 @@ hr {
 	margin-bottom: 1.5em;
 }
 
+/* Links */
+a {
+	color: royalblue;
+}
+a:visited {
+	color: purple;
+}
+a:hover,
+a:focus,
+a:active {
+	color: midnightblue;
+}
+
 /* Text elements */
 p {
 	margin-bottom: 1.5em;
 }
-ul, ol {
+p ul, p ol {
 	margin: 0 0 1.5em 3em;
 }
-ul {
+p ul {
 	list-style: disc;
 }
-ol {
+p ol {
 	list-style: decimal;
 }
-ul ul, ol ol, ul ol, ol ul {
+p ul ul, p ol ol, p ul ol, p ol ul {
 	margin-bottom: 0;
 	margin-left: 1.5em;
 }
@@ -187,38 +204,5 @@ textarea {
 	margin: 0 auto;
 }
 
-/* Titles */
 
-h1{
-
-}
-
-h2{
-
-}
-
-h3{
-
-}
-
-h4{
-
-}
-
-h5{
-	
-}
-
-/* Links */
-a {
-	color: royalblue;
-}
-a:visited {
-	color: purple;
-}
-a:hover,
-a:focus,
-a:active {
-	color: midnightblue;
-}
 
