--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -51,6 +51,8 @@ section {
 }
 ol, ul {
 	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 table { /* tables still need 'cellspacing="0"' in the markup */
 	border-collapse: separate;
