--- a/style.css
+++ b/style.css
@@ -1,403 +1,11 @@
 /*
-Theme Name: _BluePlate
-Theme URI: http://www.seanmichael.me
-Author: Sean Michael
-Author URI: http://www.seanmichael.me
-Description: A Starter Theme Created By Sean Michael
+Theme Name: BluePlate Boiler Plate for WordPress
+Theme URI: 
+Description: A Starter Theme for WordPress by Sean Michael & forked by Terence Devine
 Version: 1.0
-Tags: Clean, Mean
-*/
-/* =Reset
--------------------------------------------------------------- */
-/* line 22, css/_reset.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-  border: 0;
-  font-family: inherit;
-  font-size: 100%;
-  font-style: inherit;
-  font-weight: inherit;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  vertical-align: baseline;
-}
-
-/* line 33, css/_reset.scss */
-html {
-  font-size: 62.5%;
-  /* Corrects text resizing oddly in IE6/7 when body font-size is set using em units http://clagnut.com/blog/348/#c790 */
-  overflow-y: scroll;
-  /* Keeps page centred in all browsers regardless of content height */
-  -webkit-text-size-adjust: 100%;
-  /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
-  -ms-text-size-adjust: 100%;
-  /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
-}
-
-/* line 49, css/_reset.scss */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section {
-  display: block;
-}
-
-/* line 52, css/_reset.scss */
-ol, ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* line 57, css/_reset.scss */
-table {
-  /* tables still need 'cellspacing="0"' in the markup */
-  border-collapse: separate;
-  border-spacing: 0;
-}
-
-/* line 61, css/_reset.scss */
-caption, th, td {
-  font-weight: normal;
-  text-align: left;
-}
-
-/* line 66, css/_reset.scss */
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-}
-
-/* line 69, css/_reset.scss */
-blockquote, q {
-  quotes: "" "";
-}
-
-/* line 72, css/_reset.scss */
-a:focus {
-  outline: thin dotted;
-}
-
-/* line 76, css/_reset.scss */
-a:hover,
-a:active {
-  /* Improves readability when focused and also mouse hovered in all browsers people.opera.com/patrickl/experiments/keyboard/test */
-  outline: 0;
-}
-
-/* line 79, css/_reset.scss */
-a img {
-  border: 0;
-}
-
-/* =Fonts
------------------------------------------------ */
-/* =Global
------------------------------------------------ */
-/* line 12, css/_global.scss */
-body,
-button,
-input,
-select,
-textarea {
-  color: #404040;
-  font-family: sans-serif;
-  font-size: 16px;
-  font-size: 1.6rem;
-  line-height: 1.5;
-}
-
-/* Headings */
-/* line 21, css/_global.scss */
-h1, h2, h3, h4, h5, h6 {
-  clear: both;
-}
-
-/* line 24, css/_global.scss */
-hr {
-  background-color: #ccc;
-  border: 0;
-  height: 1px;
-  margin-bottom: 1.5em;
-}
-
-/* Links */
-/* line 32, css/_global.scss */
-a {
-  color: royalblue;
-}
-
-/* line 35, css/_global.scss */
-a:visited {
-  color: purple;
-}
-
-/* line 40, css/_global.scss */
-a:hover,
-a:focus,
-a:active {
-  color: midnightblue;
-}
-
-/* Text elements */
-/* line 45, css/_global.scss */
-p {
-  margin-bottom: 1.5em;
-}
-
-/* line 48, css/_global.scss */
-p ul, p ol {
-  margin: 0 0 1.5em 3em;
-}
-
-/* line 51, css/_global.scss */
-p ul {
-  list-style: disc;
-}
-
-/* line 54, css/_global.scss */
-p ol {
-  list-style: decimal;
-}
-
-/* line 57, css/_global.scss */
-p ul ul, p ol ol, p ul ol, p ol ul {
-  margin-bottom: 0;
-  margin-left: 1.5em;
-}
-
-/* line 61, css/_global.scss */
-dt {
-  font-weight: bold;
-}
-
-/* line 64, css/_global.scss */
-dd {
-  margin: 0 1.5em 1.5em;
-}
-
-/* line 67, css/_global.scss */
-b, strong {
-  font-weight: bold;
-}
-
-/* line 70, css/_global.scss */
-dfn, cite, em, i {
-  font-style: italic;
-}
-
-/* line 73, css/_global.scss */
-blockquote {
-  margin: 0 1.5em;
-}
-
-/* line 76, css/_global.scss */
-address {
-  margin: 0 0 1.5em;
-}
-
-/* line 79, css/_global.scss */
-pre {
-  margin-bottom: 1.6em;
-  padding: 1.6em;
-  overflow: auto;
-  max-width: 100%;
-}
-
-/* line 85, css/_global.scss */
-code, kbd, tt, var {
-  font: 15px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-}
-
-/* line 88, css/_global.scss */
-abbr, acronym {
-  border-bottom: 1px dotted #666;
-  cursor: help;
-}
-
-/* line 92, css/_global.scss */
-mark, ins {
-  background: #fff9c0;
-  text-decoration: none;
-}
-
-/* line 97, css/_global.scss */
-sup,
-sub {
-  font-size: 75%;
-  height: 0;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-/* line 104, css/_global.scss */
-sup {
-  bottom: 1ex;
-}
-
-/* line 107, css/_global.scss */
-sub {
-  top: .5ex;
-}
-
-/* line 110, css/_global.scss */
-small {
-  font-size: 75%;
-}
-
-/* line 113, css/_global.scss */
-big {
-  font-size: 125%;
-}
-
-/* line 116, css/_global.scss */
-figure {
-  margin: 0;
-}
-
-/* line 119, css/_global.scss */
-table {
-  margin: 0 0 1.5em;
-  width: 100%;
-}
-
-/* line 123, css/_global.scss */
-th {
-  font-weight: bold;
-}
-
-/* line 129, css/_global.scss */
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  /* Corrects font size not being inherited in all browsers */
-  margin: 0;
-  /* Addresses margins set differently in IE6/7, F3/4, S5, Chrome */
-  vertical-align: baseline;
-  /* Improves appearance and consistency in all browsers */
-  *vertical-align: middle;
-  /* Improves appearance and consistency in all browsers */
-}
-
-/* line 136, css/_global.scss */
-button,
-input {
-  line-height: normal;
-  /* Addresses FF3/4 setting line-height using !important in the UA stylesheet */
-  *overflow: visible;
-  /* Corrects inner spacing displayed oddly in IE6/7 */
-}
-
-/* line 143, css/_global.scss */
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  cursor: pointer;
-  /* Improves usability and consistency of cursor style between image-type 'input' and others */
-  -webkit-appearance: button;
-  /* Corrects inability to style clickable 'input' types in iOS */
-}
-
-/* line 149, css/_global.scss */
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  /* Addresses box sizing set to content-box in IE8/9 */
-  padding: 0;
-  /* Addresses excess padding in IE8/9 */
-}
-
-/* line 153, css/_global.scss */
-input[type="search"] {
-  -webkit-appearance: textfield;
-  /* Addresses appearance set to searchfield in S5, Chrome */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  /* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */
-  box-sizing: content-box;
-}
-
-/* line 159, css/_global.scss */
-input[type="search"]::-webkit-search-decoration {
-  /* Corrects inner padding displayed oddly in S5, Chrome on OSX */
-  -webkit-appearance: none;
-}
-
-/* line 163, css/_global.scss */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  /* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
-  border: 0;
-  padding: 0;
-}
-
-/* line 169, css/_global.scss */
-input[type=text],
-input[type=email],
-textarea {
-  color: #666;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-/* line 176, css/_global.scss */
-input[type=text]:focus,
-input[type=email]:focus,
-textarea:focus {
-  color: #111;
-}
-
-/* line 180, css/_global.scss */
-input[type=text],
-input[type=email] {
-  padding: 3px;
-}
-
-/* line 183, css/_global.scss */
-textarea {
-  overflow: auto;
-  /* Removes default vertical scrollbar in IE6/7/8/9 */
-  padding-left: 3px;
-  vertical-align: top;
-  /* Improves readability and alignment in all browsers */
-  width: 98%;
-}
-
-/* Alignment */
-/* line 191, css/_global.scss */
-.alignleft {
-  display: inline;
-  float: left;
-  margin-right: 1.5em;
-}
-
-/* line 196, css/_global.scss */
-.alignright {
-  display: inline;
-  float: right;
-  margin-left: 1.5em;
-}
-
-/* line 201, css/_global.scss */
-.aligncenter {
-  clear: both;
-  display: block;
-  margin: 0 auto;
-}
+Author: Terence Devine
+Author URI: http://terencedevine.com
+Tags: blank, starter, boilerplate
+License: GNU General Public License v2.0
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+*/article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none}[hidden]{display:none}html{font-size:100%;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0;font-size:12px;line-height:20px;letter-spacing:.08em}body,button,input,select,textarea{font-family:sans;color:#444444}::-moz-selection{background:green;color:#fff;text-shadow:none}::selection{background:green;color:#fff;text-shadow:none}a{color:blue;text-decoration:none}a:visited{color:blue}a:hover{color:blue}a:focus{outline:none}a:hover,a:active{outline:none}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:0}dfn{font-style:italic}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}ins{background:#ff9;color:#000;text-decoration:none}mark{background:#ff0;color:#000;font-style:italic;font-weight:bold}pre,code,kbd,samp{font-family:monospace, monospace;_font-family:'courier new', monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:"";content:none}small{font-size:85%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}ul,ol{margin:1em 0;padding:0 0 0 40px}dd{margin:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none;margin:0;padding:0}img{border:0;-ms-interpolation-mode:bicubic;vertical-align:middle}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:0;margin:0;padding:0}label{cursor:pointer}legend{border:0;*margin-left:-7px;padding:0}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal;*overflow:visible}table button,table input{*overflow:auto}button,input[type="button"],input[type="reset"],input[type="submit"]{cursor:pointer;-webkit-appearance:button}input[type="checkbox"],input[type="radio"]{box-sizing:border-box}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top;resize:vertical}input:invalid,textarea:invalid{background-color:#f0dddd}table{border-collapse:collapse;border-spacing:0}td{vertical-align:top}.wrap{zoom:1;width:960px;max-width:90%;margin:0 auto;position:relative}.wrap:before,.wrap:after{content:"";display:table}.wrap:after{clear:both}.alignnone{margin:5px 20px 20px 0}.aligncenter,div.aligncenter{display:block;margin:5px auto 5px auto}.alignright{float:right;margin:5px 0 20px 20px}.alignleft{float:left;margin:5px 20px 20px 0}.aligncenter{display:block;margin:5px auto 5px auto}a img.alignright{float:right;margin:5px 0 20px 20px}a img.alignnone{margin:5px 20px 20px 0}a img.alignleft{float:left;margin:5px 20px 20px 0}a img.aligncenter{display:block;margin-left:auto;margin-right:auto}.wp-caption{background:#fff;border:1px solid #f0f0f0;max-width:96%;padding:5px 3px 10px;text-align:center}.wp-caption.alignnone{margin:5px 20px 20px 0}.wp-caption.alignleft{margin:5px 20px 20px 0}.wp-caption.alignright{margin:5px 0 20px 20px}.wp-caption img{border:0 none;height:auto;margin:0;max-width:98.5%;padding:0;width:auto}.wp-caption p.wp-caption-text{font-size:11px;line-height:17px;margin:0;padding:0 4px 5px}@media print{*{background:transparent !important;color:black !important;text-shadow:none !important;filter:none !important;-ms-filter:none !important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100% !important}@page{margin:0.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
