--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /*!
 Theme Name: BluePlate Boiler Plate for WordPress
 Theme URI: 
-Description: A Starter Theme for WordPress by Sean Michael & forked by Terence Devine
+Description: A Starter Theme for WordPress forked by Terence Devine
 Version: 1.0
 Author: Terence Devine
 Author URI: http://terencedevine.com
