add mo fo to Theme info for testing of Source Tree

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: BluePlate Boiler Plate for WordPress
+Theme Name: BluePlate Boiler Plate for WordPress mo fo
 Theme URI: 
 Description: A Starter Theme for WordPress forked by Terence Devine
 Version: 1.0
