--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,22 +17,27 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 = Fonts
 ******************************/
 
-$sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$serif: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
+$sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$serif: TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, serif;
 
 /******************************
 = Colors
 ******************************/
 
 $red: red;
-$blue: blue;
+
+/******************************
+= Text Highlight
+******************************/
+
+::selection { }
+::-moz-selection { }
 
 /******************************
 = Base
 ******************************/
 
-::selection { background: $blue; color: #fff; }
-::-moz-selection { background: $blue; color: #fff; }
+*{ @include box-sizing(border-box); }
 body{
 	font: normal 62.5em/1.8em $sans;
 }
@@ -65,6 +70,14 @@ footer[role=contentinfo]{ }
 ******************************/
 
 @media screen and ( min-width: 800px ) {
+
+	/******************************
+	= Hover
+	******************************/
+
+	a:hover{ }
+	.button:hover{ }
+	nav[role=navigation] a:hover{ }
 
 	/******************************
 	= Grid
