--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,56 +9,25 @@ Tags: blank, starter, boilerplate
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
+
+/******************************
+= Initial Imports
+******************************/
+// Use Compass
 @import 'compass';
+// Normalize Errthing
 @import 'normalize';
+// WordPress Base
 @import 'wordpress';
-
-/******************************
-= Fonts
-******************************/
-
-$sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$serif: TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, serif;
-
-/******************************
-= Colors
-******************************/
-
-$red: red;
-
-/******************************
-= Text Highlight
-******************************/
-
-::selection { }
-::-moz-selection { }
-
-/******************************
-= Base
-******************************/
-
-*{ @include box-sizing(border-box); }
-body{
-	font: normal 62.5em/1.8em $sans;
-}
-h1,h2,h3,h4,h5,h6{
-	a{ }
-}
-p,li{ }
-a{ }
-.button{ }
+// Mixins & Variables
+@import 'bits';
+// Base Styles
+@import 'base';
 
 /******************************
 = Layout
 ******************************/
 
-.clearfix{
-	&:after {
-		content: "";
-		display: table;
-		clear: both;
-	}
-}
 header[role=banner]{
 
 	h1{
@@ -81,43 +50,13 @@ nav.footer-nav{
 }
 
 /******************************
-= Homepage
+= Plugin Imports
 ******************************/
 
 /******************************
-= Media Queries
+= Final Imports
 ******************************/
-
-@media screen and ( min-width: 800px ) {
-
-	/******************************
-	= Hover
-	******************************/
-
-	a:hover{ }
-	.button:hover{ }
-	nav[role=navigation] a:hover{ }
-
-	/******************************
-	= Grid
-	******************************/
-	
-	$padding: 10px;
-	.grid{ padding-left: $padding; }
-	[class*=grid-]{ float: left; 
-		.col{ margin-right: $padding; }
-	}
-	.grid-full{ width: 100%; }
-	.grid-1-4{ width: 25%; }
-	.grid-1-2{ width: 50%; }
-	.grid-3-4{ width: 75%; }
-	.grid-1-3{ width: 33.33%; }
-	.grid-2-3{ width: 66.67%; }
-	.grid-1-5{ width: 20%; }
-	.grid-2-5{ width: 40%; }
-	.grid-3-5{ width: 60%; }
-	.grid-4-5{ width: 80%; }
-
-}
-
+// Make it Repsonsive
+@import 'media-queries';
+// For Tree Killers
 @import 'print';
