--- a/scss/bits.scss
+++ b/scss/bits.scss
@@ -22,3 +22,18 @@ $red: red;
 		clear: both;
 	}
 }
+
+$padding: 10px;
+.wrap{
+  width: 1000px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.grid{ padding-left: $padding; clear: both; }
+[class*=grid-]{
+  float: left;
+  width: 100%;
+  margin-bottom: 10px;
+  
+  .col{ margin-right: $padding; }
+}
