--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,3 +1,6 @@
+// Normalize Errthing
+@import 'normalize';
+
 /******************************
 = Base
 ******************************/
@@ -7,7 +10,12 @@ body{
 	font: normal 62.5em/1.8em $sans;
 }
 h1,h2,h3,h4,h5,h6{
-	a{ }
+	a{ 
+
+		@include breakpoint(desktop) { &:hover{
+			
+		}}
+	}
 }
 h1{ font-size: 2.6em; }
 h2{ font-size: 2.4em; }
@@ -17,9 +25,19 @@ h5{ font-size: 1.8em; }
 h6{ font-size: 1.6em; }
 p,li{ font-size: 1.3em; }
 ul{ margin: 0; padding: 0; list-style: none; }
-a{ }
+a{
+	color: red;
+
+	@include breakpoint(desktop) { &:hover{
+
+	}}
+}
 .button{
 	font-size: 1.3em;
+
+	@include breakpoint(desktop) { &:hover{
+
+	}}
 }
 
 /******************************
