--- a/scss/bits.scss
+++ b/scss/bits.scss
@@ -10,3 +10,16 @@ $serif: TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, serif;
 ******************************/
 
 $red: red;
+
+/******************************
+= Break Points
+******************************/
+
+@mixin breakpoint($point) {
+	@if $point == tablet {
+		@media (min-width: 600px) { @content; }
+	}
+	@else if $point == desktop {
+		@media (min-width: 800px) { @content; }
+	}
+}
