Add fallback for min-width mixin

--- a/scss/base/bits.scss
+++ b/scss/base/bits.scss
@@ -22,4 +22,7 @@ $red: red;
 	@else if $point == desktop {
 		@media (min-width: 800px) { @content; }
 	}
+	@else {
+		@media (min-width: $point) { @content; }
+	}
 }
